# user_microservice

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
data/users/: mezeipetister.yml
src/: convert.rs  main.rs  password.rs  prelude.rs  user.rs
